[package]
name = "uuencode"
version = "0.1.4"
authors = [
    "/u/Badel2",
    "/u/iamnotposting",
    "Marty Jones <murtin.jones@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "uuencoder/decoder"
keywords = ["uuencode", "uudecode"]
repository = "https://github.com/murtyjones/uuencode"

[dependencies]
